fix: modify images on invitados and colaboradores to fit screen on mobile

--- a/css/general.css
+++ b/css/general.css
@@ -42,6 +42,7 @@ body {
     background-repeat: repeat;
     position: relative;
     padding-bottom: 70px;
+    max-width: 100%;
 }
 body:after {
     content: '';
@@ -340,8 +341,9 @@ button.ticket-button-price {
     font-weight: 900;
 }
 table.invitados {
-    width: 100%;
-    max-width: 1200px;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
 }
 .carousel img {
     height: 500px;
@@ -352,8 +354,36 @@ table.invitados {
     margin-left: 150px;
     width:450px
 }
+.invitados-img img, .colaboradores-img img {
+    max-width: 500px;
+    object-fit: contain;
+    height: 400px;
+    width: 90%;
+    margin: 10px auto;
+}
+.invitados-info {
+    max-width: 400px;
+    margin: auto;
+    margin-right: 8%;
+    margin-top: -90px;
+    margin-bottom: 70px;
+    width: auto;
+    min-width: 300px;
+}
+
 @media (min-width: 1500px) {
     .index-buy-tickets {
         margin-left: 300px;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    .invitados-img img {
+        height: 300px;
+        object-position: top;
+    }
+    .colaboradores-img img {
+        height: 250px;
+        object-position: top;
     }
 }
